# raytrace-rs

./: .gitignore  Cargo.toml  README.md  bvhbench.txt  make_vid.sh  todo.txt
scripts/: imagecheck.py
src/: generate.rs  image_writing.rs  main.rs  material.rs  rendering.rs  scene.rs  shape_bvh_node.rs  shapes.rs  structures.rs  utils.rs
src/scenes/: animated.rs  fixed.rs  mod.rs
