[package]
name = "raytrace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bvh = "0.7.2"
either = "1.9.0"
glam = "0.24.2"
image = "0.24.7"
indicatif = { version = "0.17.7", features = ["rayon"] }
rand = {version ="0.8.5", features=["small_rng"]}
rayon = "1.8.0"
tobj = "4.0.0"
